--- a/AlgoWorker/AlgoWorker.csproj
+++ b/AlgoWorker/AlgoWorker.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="AlgoWorker.cs" />
     <Compile Include="Calendar.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pupil.cs" />
   </ItemGroup>
